package empresa.catalogo;

public class Servicio extends ProductoServicio {
    public Servicio(int codigo, String nombre, double precio) {
        super(codigo, nombre, precio);
    }
}
